src/components/layouts/SNB/snb.module.scss
@use 'styles/constants/colors';
@use 'styles/constants/levels';

.wrapper {
  position: relative;
  height: 100vh;
  background-color: colors.$WHITE;
  transition: 150ms;

  .snbMenu {
    position: relative;
    top: 120px;
    width: 90%;
    margin: 0 auto;
  }

  .rightEdge {
    position: absolute;
    top: 80px;
    right: 0;
    z-index: levels.$SNB;
    width: 10px;
    height: calc(100% - 80px);
    cursor: pointer;
    transition: 150ms;

    .folder {
      position: absolute;
      top: 0;
      bottom: 0;
      display: flex;
      align-items: center;
      justify-content: center;
      width: 30px;
      height: 30px;
      margin: auto;
      color: colors.$GRAY5;
      background-color: colors.$WHITE;
      border: 1px solid colors.$GRAY5;
      border-radius: 50%;
      opacity: 0;
      transition: 150ms;
    }

    &:hover {
      background-color: rgba(colors.$GRAY9, 10%);

      .folder {
        opacity: 1;
      }
    }
  }
}

.open {
  width: 300px;

  .rightEdge {
    transform: translateX(50%);

    .folder {
      left: -10px;
    }
  }
}

.closed {
  width: 0;

  .rightEdge {
    transform: translateX(100%);

    .folder {
      left: 0;
    }
  }
}

.lightMode {
  color: colors.$GRAY9;
  background-color: colors.$BG_W;
  // border-right: 1px solid colors.$GRAY5;

  svg {
    fill: colors.$GRAY9;
  }

  .rightEdge:hover {
    background-color: rgba(colors.$GRAY9, 10%);
  }

  button:hover {
    background-color: colors.$GRAY1;

    .title {
      color: colors.$GRAY9;
    }

    .icon {
      fill: colors.$GRAY9;
    }
  }
}

.darkMode {
  color: colors.$GRAY0;
  background-color: colors.$BG_DARK;
  // border-right: 1px solid colors.$GRAY7;

  svg:not(.arrowIcon) {
    fill: colors.$GRAY0;
  }

  .rightEdge:hover {
    background-color: rgba(colors.$GRAY0, 10%);
  }

  button:hover {
    background-color: colors.$GRAY8;

    .title {
      color: colors.$GRAY0;
    }

    .icon {
      fill: colors.$GRAY0;
    }
  }
}

